Halfway working condition